--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <link rel="manifest" href="manifest.json">
 
   <!-- Android -->
-  <meta name="theme-color" content="#3498db">
+  <meta name="theme-color" content="#51ca8c">
 </head>
 
 <body>
